--- a/src/main/resources/assets/advancedvaluables/lang/en_us.json
+++ b/src/main/resources/assets/advancedvaluables/lang/en_us.json
@@ -3,6 +3,7 @@
   "creativetab.advancedvaluables.valuable_ores": "Advanced Valuables : Valuable Ores",
   "creativetab.advancedvaluables.tools_armor": "Advanced Valuables : Tools & Armor",
   "creativetab.advancedvaluables.foods": "Advanced Valuables : Foods",
+  "creativetab.advancedvaluables.decor": "Advanced Valuables : Decor Blocks",
 
   "item.advancedvaluables.blue_sapphire": "Blue Sapphire",
   "item.advancedvaluables.red_sapphire": "Red Sapphire",
@@ -117,6 +118,96 @@
   "block.advancedvaluables.yellow_garnet_ore": "Yellow Garnet Ore",
   "block.advancedvaluables.fusion_ore": "Fusion Ore",
   "block.advancedvaluables.ruby_ore": "Ruby Ore",
+
+  "block.advancedvaluables.red_sapphire_stairs": "Red Sapphire Stairs",
+  "block.advancedvaluables.red_sapphire_slab": "Red Sapphire Slab",
+  "block.advancedvaluables.red_sapphire_pressure_plate": "Red Sapphire Pressure Plate",
+  "block.advancedvaluables.red_sapphire_button": "Red Sapphire Button",
+  "block.advancedvaluables.red_sapphire_fence": "Red Sapphire Fence",
+  "block.advancedvaluables.red_sapphire_fence_gate": "Red Sapphire Fence Gate",
+  "block.advancedvaluables.red_sapphire_wall": "Red Sapphire Wall",
+  "block.advancedvaluables.red_sapphire_door": "Red Sapphire Door",
+  "block.advancedvaluables.red_sapphire_trapdoor": "Red Sapphire Trapdoor",
+
+  "block.advancedvaluables.blue_sapphire_stairs": "Blue Sapphire Stairs",
+  "block.advancedvaluables.blue_sapphire_slab": "Blue Sapphire Slab",
+  "block.advancedvaluables.blue_sapphire_pressure_plate": "Blue Sapphire Pressure Plate",
+  "block.advancedvaluables.blue_sapphire_button": "Blue Sapphire Button",
+  "block.advancedvaluables.blue_sapphire_fence": "Blue Sapphire Fence",
+  "block.advancedvaluables.blue_sapphire_fence_gate": "Blue Sapphire Fence Gate",
+  "block.advancedvaluables.blue_sapphire_wall": "Blue Sapphire Wall",
+  "block.advancedvaluables.blue_sapphire_door": "Blue Sapphire Door",
+  "block.advancedvaluables.blue_sapphire_trapdoor": "Blue Sapphire Trapdoor",
+
+  "block.advancedvaluables.green_sapphire_stairs": "Green Sapphire Stairs",
+  "block.advancedvaluables.green_sapphire_slab": "Green Sapphire Slab",
+  "block.advancedvaluables.green_sapphire_pressure_plate": "Green Sapphire Pressure Plate",
+  "block.advancedvaluables.green_sapphire_button": "Green Sapphire Button",
+  "block.advancedvaluables.green_sapphire_fence": "Green Sapphire Fence",
+  "block.advancedvaluables.green_sapphire_fence_gate": "Green Sapphire Fence Gate",
+  "block.advancedvaluables.green_sapphire_wall": "Green Sapphire Wall",
+  "block.advancedvaluables.green_sapphire_door": "Green Sapphire Door",
+  "block.advancedvaluables.green_sapphire_trapdoor": "Green Sapphire Trapdoor",
+
+  "block.advancedvaluables.red_garnet_stairs": "Red Garnet Stairs",
+  "block.advancedvaluables.red_garnet_slab": "Red Garnet Slab",
+  "block.advancedvaluables.red_garnet_pressure_plate": "Red Garnet Pressure Plate",
+  "block.advancedvaluables.red_garnet_button": "Red Garnet Button",
+  "block.advancedvaluables.red_garnet_fence": "Red Garnet Fence",
+  "block.advancedvaluables.red_garnet_fence_gate": "Red Garnet Fence Gate",
+  "block.advancedvaluables.red_garnet_wall": "Red Garnet Wall",
+  "block.advancedvaluables.red_garnet_door": "Red Garnet Door",
+  "block.advancedvaluables.red_garnet_trapdoor": "Red Garnet Trapdoor",
+
+  "block.advancedvaluables.blue_garnet_stairs": "Blue Garnet Stairs",
+  "block.advancedvaluables.blue_garnet_slab": "Blue Garnet Slab",
+  "block.advancedvaluables.blue_garnet_pressure_plate": "Blue Garnet Pressure Plate",
+  "block.advancedvaluables.blue_garnet_button": "Blue Garnet Button",
+  "block.advancedvaluables.blue_garnet_fence": "Blue Garnet Fence",
+  "block.advancedvaluables.blue_garnet_fence_gate": "Blue Garnet Fence Gate",
+  "block.advancedvaluables.blue_garnet_wall": "Blue Garnet Wall",
+  "block.advancedvaluables.blue_garnet_door": "Blue Garnet Door",
+  "block.advancedvaluables.blue_garnet_trapdoor": "Blue Garnet Trapdoor",
+
+  "block.advancedvaluables.pink_garnet_stairs": "Pink Garnet Stairs",
+  "block.advancedvaluables.pink_garnet_slab": "Pink Garnet Slab",
+  "block.advancedvaluables.pink_garnet_pressure_plate": "Pink Garnet Pressure Plate",
+  "block.advancedvaluables.pink_garnet_button": "Pink Garnet Button",
+  "block.advancedvaluables.pink_garnet_fence": "Pink Garnet Fence",
+  "block.advancedvaluables.pink_garnet_fence_gate": "Pink Garnet Fence Gate",
+  "block.advancedvaluables.pink_garnet_wall": "Pink Garnet Wall",
+  "block.advancedvaluables.pink_garnet_door": "Pink Garnet Door",
+  "block.advancedvaluables.pink_garnet_trapdoor": "Pink Garnet Trapdoor",
+
+  "block.advancedvaluables.yellow_garnet_stairs": "Yellow Garnet Stairs",
+  "block.advancedvaluables.yellow_garnet_slab": "Yellow Garnet Slab",
+  "block.advancedvaluables.yellow_garnet_pressure_plate": "Yellow Garnet Pressure Plate",
+  "block.advancedvaluables.yellow_garnet_button": "Yellow Garnet Button",
+  "block.advancedvaluables.yellow_garnet_fence": "Yellow Garnet Fence",
+  "block.advancedvaluables.yellow_garnet_fence_gate": "Yellow Garnet Fence Gate",
+  "block.advancedvaluables.yellow_garnet_wall": "Yellow Garnet Wall",
+  "block.advancedvaluables.yellow_garnet_door": "Yellow Garnet Door",
+  "block.advancedvaluables.yellow_garnet_trapdoor": "Yellow Garnet Trapdoor",
+
+  "block.advancedvaluables.fusion_stairs": "Fusion Stairs",
+  "block.advancedvaluables.fusion_slab": "Fusion Slab",
+  "block.advancedvaluables.fusion_pressure_plate": "Fusion Pressure Plate",
+  "block.advancedvaluables.fusion_button": "Fusion Button",
+  "block.advancedvaluables.fusion_fence": "Fusion Fence",
+  "block.advancedvaluables.fusion_fence_gate": "Fusion Fence Gate",
+  "block.advancedvaluables.fusion_wall": "Fusion Wall",
+  "block.advancedvaluables.fusion_door": "Fusion Door",
+  "block.advancedvaluables.fusion_trapdoor": "Fusion Trapdoor",
+
+  "block.advancedvaluables.ruby_stairs": "Ruby Stairs",
+  "block.advancedvaluables.ruby_slab": "Ruby Slab",
+  "block.advancedvaluables.ruby_pressure_plate": "Ruby Pressure Plate",
+  "block.advancedvaluables.ruby_button": "Ruby Button",
+  "block.advancedvaluables.ruby_fence": "Ruby Fence",
+  "block.advancedvaluables.ruby_fence_gate": "Ruby Fence Gate",
+  "block.advancedvaluables.ruby_wall": "Ruby Wall",
+  "block.advancedvaluables.ruby_door": "Ruby Door",
+  "block.advancedvaluables.ruby_trapdoor": "Ruby Trapdoor",
 
   "item.advancedvaluables.red_sapphire_helmet": "Red Sapphire Helmet",
   "item.advancedvaluables.red_sapphire_chestplate": "Red Sapphire Chestplate",
