--- a/src/main/resources/assets/advancedvaluables/lang/en_us.json
+++ b/src/main/resources/assets/advancedvaluables/lang/en_us.json
@@ -79,6 +79,20 @@
   "item.advancedvaluables.ruby_hoe": "Ruby Hoe",
   "item.advancedvaluables.ruby_sword": "Ruby Sword",
 
+  "item.advancedvaluables.red_sapphire_hammer": "Red Sapphire Hammer",
+  "item.advancedvaluables.blue_sapphire_hammer": "Blue Sapphire Hammer",
+  "item.advancedvaluables.green_sapphire_hammer": "Green Sapphire Hammer",
+
+  "item.advancedvaluables.red_garnet_hammer": "Red Garnet Hammer",
+  "item.advancedvaluables.blue_garnet_hammer": "Blue Garnet Hammer",
+  "item.advancedvaluables.pink_garnet_hammer": "Pink Garnet Hammer",
+  "item.advancedvaluables.yellow_garnet_hammer": "Yellow Garnet Hammer",
+
+  "item.advancedvaluables.fusion_hammer": "Fusion Hammer",
+  "item.advancedvaluables.ruby_hammer": "Ruby Hammer",
+
+  "item.advancedvaluables.hammer_wireframe": "Hammer Wireframe",
+
   "block.advancedvaluables.blue_sapphire_block": "Block of Blue Sapphire",
   "block.advancedvaluables.red_sapphire_block": "Block of Red Sapphire",
   "block.advancedvaluables.green_sapphire_block": "Block of Green Sapphire",
